--- a/dev/spaceBattle/index.html
+++ b/dev/spaceBattle/index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-<canvas id="canvas" style="width:100%;height:100%; position:absolute;top:0px;left: 0px;background-color: black"></canvas>
+<canvas id="canvas" style="width:100%;height:100%; position:absolute;top:0px;left: 0px;"></canvas>
 <script src="compile.js" ></script>
 </body>
 </html>
