add css to index

--- a/dev/spaceBattle/game/html/index.html
+++ b/dev/spaceBattle/game/html/index.html
@@ -9,38 +9,24 @@
 <canvas id="canvas"></canvas>
 <div class="fps" id="fps"></div>
 <div class="count" id="count" style=""></div>
-
 <div class="side-stat-panel">
     <div class="line">
         <div class="line stat" id="collTime"></div>
-        <span>collision</span>
+        <span>- collision</span>
     </div>
     <div class="line">
         <div class="line stat" id="drTime"></div>
-        <span>draw</span>
+        <span>- draw</span>
     </div>
     <div class="line">
         <div class="line stat" id="moveT"></div>
-        <span>move</span>
+        <span>- move</span>
     </div>
     <div class="line">
         <div class="line stat" id="fieldD"></div>
-        <span>field</span>
+        <span>- field</span>
     </div>
 </div>
-
-
-<!--<div class="colltime" id="collTime" style="display: none;"></div>-->
-<!--<p style="background:green;color:#fff; position:fixed;left:220px;top:5px; width:65px;height:20px;margin:0;">
-    collision</p>-->
-
-<!--<p style="background:navy;color:#fff; position:fixed;left:220px;top:35px; width:65px;height:20px;margin:0;">draw</p>-->
-
-<!--<p style="background:yellow;color:#000; position:fixed;left:220px;top:65px; width:65px;height:20px;margin:0;">move</p>-->
-
-<!--<p style="background:magenta;color:#fff; position:fixed;left:220px;top:95px; width:65px;height:20px;margin:0;">field</p>-->
-
-
 <script src="../js/compile.js"></script>
 </body>
 </html>
