add new test for determine optimaise algorythm collision object

--- a/dev/spaceBattle/game/html/index.html
+++ b/dev/spaceBattle/game/html/index.html
@@ -27,6 +27,7 @@
         <span>- field</span>
     </div>
 </div>
-<script src="../js/compile.js"></script>
+<!--<script src="../js/compile.js"></script>-->
+<script src="../js/collision.js"></script>
 </body>
 </html>
