add init file include require js

--- a/dev/spaceBattle/game/html/index.html
+++ b/dev/spaceBattle/game/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="../css/index.css"/>
+
 </head>
 <body>
 <canvas id="canvas"></canvas>
@@ -28,6 +29,8 @@
     </div>
 </div>
 <!--<script src="../js/compile.js"></script>-->
-<script src="../js/collision.js"></script>
+<script data-main="../js/collision" src="../js/require.js"></script>
+<!--<script src="../js/collision.js"></script>-->
+
 </body>
 </html>
